<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.driver.DriverSignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/et_name"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:layout_margin="5dp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:layout_margin="5dp"
                android:inputType="number|phone" />
            <EditText
                android:id="@+id/et_carModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carmodel"
                android:layout_margin="5dp"
                android:inputType="text" />
            <EditText
                android:id="@+id/et_carRegistrationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carregistrationnumber"
                android:layout_margin="5dp"
                android:inputType="number" />
            <EditText
                android:id="@+id/et_carColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carcolor"
                android:layout_margin="5dp"
                android:inputType="text" />
            <Button
                android:id="@+id/btn_driver_signup"
                android:layout_width="200dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:onClick="onDriverClick"
                android:layout_height="wrap_content"
                android:text="@string/register"
                 />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>